# dualfermion

./: .clang-tidy  .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build.yml
c++/app4triqs/: container_set.cpp  container_set.hpp  params.cpp  params.hpp  post_process.cpp  post_process.hpp  solver_core.cpp  solver_core.hpp  types.hpp
c++/triqs_dualfermion/: CMakeLists.txt  container_set.cpp  container_set.hpp  dpt_core.cpp  dpt_core.hpp  parameters.cpp  parameters.hpp  types.hpp  util.hpp
doc/: CMakeLists.txt  about.rst  basic.rst  changelog.rst  conf.py.in  documentation.rst  index.rst  install.rst  issues.rst
doc/_templates/: sideb.html
packaging/: TRIQS-dualfermion-3.0.0-foss-2019a-Python-3.7.2.eb
packaging/conda/: meta.yaml
python/app4triqs/: __init__.py  parameters_constr_params_t.rst  parameters_solve_params_t.rst  post_process_desc.py  solver.py  solver_core_desc.py
python/triqs_dualfermion/: CMakeLists.txt  __init__.py  dpt.py  dpt_core_desc.py  plothelper.py  version.py.in
share/: CMakeLists.txt  dualfermion.modulefile.in  dualfermionvars.sh.in
share/cmake/: CMakeLists.txt  dualfermion-config.cmake.in  triqs_dualfermion-config.cmake.in
test/c++/: CMakeLists.txt  hubbard.cpp
test/python/: CMakeLists.txt  Hubbard.py  clustertest1.py  clustertest1.ref.h5  clustertest2.py  clustertest2.ref.h5  figs.py  oneband.py  oneband.ref.h5  sigmadsubset.py  sigmadsubset.ref.h5
